<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="497dp"
        android:layout_height="793dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/activity_tracker"
        android:textColor="#064C8B"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latitudeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/latitude"
        android:textColor="#45B0CC"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <TextView
        android:id="@+id/longitudeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/longitude"
        android:textColor="#45B0CC"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/latitudeTitle"
        app:layout_constraintTop_toBottomOf="@+id/latitudeTitle" />

    <TextView
        android:id="@+id/accuracyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/accuracy"
        android:textColor="#45B0CC"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/latitudeTitle"
        app:layout_constraintTop_toBottomOf="@+id/longitudeTitle" />

    <TextView
        android:id="@+id/altitudeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/altitude"
        android:textColor="#45B0CC"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/latitudeTitle"
        app:layout_constraintTop_toBottomOf="@+id/accuracyTitle" />

    <TextView
        android:id="@+id/addressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/address"
        android:textColor="#45B0CC"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/latitudeTitle"
        app:layout_constraintTop_toBottomOf="@+id/altitudeTitle" />

    <TextView
        android:id="@+id/latitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textColor="#051C50"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/latitudeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toEndOf="@+id/latitudeTitle"
        app:layout_constraintTop_toTopOf="@+id/latitudeTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/longitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textColor="#051C50"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/longitudeTitle"
        app:layout_constraintStart_toStartOf="@+id/latitudeValue"
        app:layout_constraintTop_toTopOf="@+id/longitudeTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/accuracyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00"
        android:textColor="#051C50"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/accuracyTitle"
        app:layout_constraintStart_toStartOf="@+id/latitudeValue"
        app:layout_constraintTop_toTopOf="@+id/accuracyTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/altitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textColor="#051C50"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/altitudeTitle"
        app:layout_constraintStart_toStartOf="@+id/latitudeValue"
        app:layout_constraintTop_toTopOf="@+id/altitudeTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/addressValue"
        android:layout_width="202dp"
        android:layout_height="120dp"
        android:text="@string/nil"
        android:textColor="#051C50"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/addressTitle"
        app:layout_constraintStart_toStartOf="@+id/latitudeValue"
        app:layout_constraintTop_toTopOf="@+id/addressTitle"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>